# framewalk

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  flake.nix  rust-toolchain.toml
.github/workflows/: pr-tests.yml  pr-unit-tests.yml
crates/framewalk-mcp/: Cargo.toml
crates/framewalk-mcp/src/: config.rs  lib.rs  main.rs  raw_guard.rs  resources.rs  server.rs  server_helpers.rs  tool_catalog.rs
crates/framewalk-mcp/src/resources/: guide-attach.md  guide-breakpoints.md  guide-execution-model.md  guide-execution.md  guide-inspection.md  guide-raw-mi.md  guide-tracepoints.md  guide-variables.md  recipe-attach-running.md  recipe-conditional-breakpoint.md  recipe-debug-segfault.md  recipe-kernel-debug.md  recipe-tracepoint-session.md  reference-breakpoints.md  reference-catchpoints.md  reference-data.md  reference-execution.md  reference-file-transfer.md  reference-raw.md  reference-scheme.md  reference-session.md  reference-stack.md  reference-support.md  reference-symbols.md  reference-target.md  reference-threads.md  reference-tracepoints.md  reference-variables.md
crates/framewalk-mcp/src/scheme/: bindings.rs  marshal.rs  mod.rs  prelude.scm  route.rs  worker.rs
crates/framewalk-mcp/src/tools/: breakpoints.rs  environment.rs  execution.rs  inspection.rs  mod.rs  operator.rs  raw.rs  session.rs  symbols.rs  trace.rs  variables.rs
crates/framewalk-mcp/src/types/: breakpoints.rs  catchpoints.rs  context.rs  data.rs  execution.rs  file.rs  file_transfer.rs  misc.rs  mod.rs  raw.rs  session.rs  stack.rs  support.rs  symbol.rs  target.rs  threads.rs  tracepoints.rs  variables.rs
crates/framewalk-mcp/tests/: resources_roundtrip.rs  scheme_integration.rs  scheme_mcp_roundtrip.rs  stdio_roundtrip.rs
crates/framewalk-mi-codec/: Cargo.toml
crates/framewalk-mi-codec/examples/: dump_mi.rs
crates/framewalk-mi-codec/src/: ast.rs  command.rs  error.rs  lib.rs
crates/framewalk-mi-codec/src/encode/: cstring.rs  mod.rs
crates/framewalk-mi-codec/src/parse/: async_rec.rs  cstring.rs  cursor.rs  mod.rs  result.rs  stream.rs  value.rs
crates/framewalk-mi-codec/tests/: parser_integration.rs  proptest_roundtrip.rs
crates/framewalk-mi-codec/tests/fixtures/: ls-session.mi
crates/framewalk-mi-protocol/: Cargo.toml
crates/framewalk-mi-protocol/src/: command.rs  connection.rs  error.rs  event.rs  lib.rs  mi_types.rs  pending.rs  results_view.rs  token.rs  version.rs
crates/framewalk-mi-protocol/src/state/: breakpoints.rs  features.rs  frames.rs  mod.rs  target.rs  threads.rs  varobjs.rs
crates/framewalk-mi-protocol/tests/: happy_path.rs  state_tracking.rs
crates/framewalk-mi-transport/: Cargo.toml
crates/framewalk-mi-transport/src/: error.rs  handle.rs  lib.rs  pump.rs  shared.rs
crates/framewalk-mi-transport/src/subprocess/: config.rs  mod.rs
crates/framewalk-mi-transport/tests/: gdb_conformance.rs  handle_lifecycle.rs
crates/framewalk-mi-wire/: Cargo.toml
crates/framewalk-mi-wire/src/: frame.rs  framer.rs  lib.rs
docs/: getting-started.md  modes.md  no-source.md  scheme-reference.md
examples/: .mcp.json  hello.c  scheme-session.md  try-scheme.sh
examples/programs/: Makefile  binary-search.c  crash.c  deadlock.c  deep-call-chain.c  double-free.c  fork-crash.c  function-pointer-crash.c  linked-list.c  memory-leak.c  multithread-crash.c  ring-buffer.c  rust-panic.rs  rust-stack-overflow.rs  rust-unsafe-crash.rs  sigbus.c  sigfpe.c  signal-handler-crash.c  sort-visual.c  stack-overflow.c  state-machine.c  syscall-torture.c  threads.c  use-after-free.c  vtable-corruption.cpp
nix/: flake-module.nix
nix/lib/: source-filter.nix
nix/modules/: downstream-flake-module.nix
nix/per-system/: checks.nix  context.nix  dev-shell.nix  kernel-debug.nix  packages.nix
scripts/: syzbot-fetch  validate.sh
